--- a/src/eventer/Makefile.in
+++ b/src/eventer/Makefile.in
@@ -19,13 +19,13 @@ OBJS=	eventer.o eventer_impl.o \
 all:	libeventer.a
 
 libeventer.a:	$(OBJS)
-	@rm -f $@
-	@$(AR) cq $@ $(OBJS)
+	rm -f $@
+	$(AR) cq $@ $(OBJS)
 	@echo "- archiving $@"
-	@$(RANLIB) $@
+	$(RANLIB) $@
 
 .c.o:
-	@$(CC) $(CPPFLAGS) $(CFLAGS) -c $<
+	$(CC) $(CPPFLAGS) $(CFLAGS) -c $<
 	@echo "- compiling $<"
 
 clean:
