--- a/src/man/Makefile.in
+++ b/src/man/Makefile.in
@@ -23,24 +23,24 @@ all:	noitd.8 noitd.usage.h \
 
 noitd.8:	$(top_srcdir)/docs/executable/noitd.xml
 	@echo " - manifying $@"
-	@$(XSLTPROC) --nonet \
+	$(XSLTPROC) --nonet \
 		$(top_srcdir)/docs/docbook-xsl/manpages/docbook.xsl \
 		$(top_srcdir)/docs/executable/noitd.xml > /dev/null 2>&1
 
 noitd.usage.h:	noitd.8
 	@echo " - creating $@"
-	@$(NROFF)  -man ./noitd.8 | \
+	$(NROFF)  -man ./noitd.8 | \
 		$(top_srcdir)/buildtools/xml2h NOITD_USAGE > $@
 
 stratcond.8:	$(top_srcdir)/docs/executable/stratcond.xml
 	@echo " - manifying $@"
-	@$(XSLTPROC) --nonet \
+	$(XSLTPROC) --nonet \
 		$(top_srcdir)/docs/docbook-xsl/manpages/docbook.xsl \
 		$(top_srcdir)/docs/executable/stratcond.xml > /dev/null 2>&1
 
 stratcond.usage.h:	stratcond.8
 	@echo " - creating $@"
-	@$(NROFF)  -man ./stratcond.8 | \
+	$(NROFF)  -man ./stratcond.8 | \
 		$(top_srcdir)/buildtools/xml2h STRATCOND_USAGE > $@
 
 install:	all
