--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -28,9 +28,9 @@ clean:	clean-keys
 # This stuff if all cert stuff to make testing the daemons easier
 
 demoCA-dir:
-	@mkdir -p demoCA
-	@touch demoCA/index.txt
-	@test -f demoCA/serial || echo 00 > demoCA/serial
+	mkdir -p demoCA
+	touch demoCA/index.txt
+	test -f demoCA/serial || echo 00 > demoCA/serial
 
 test-ca.key:
 	openssl genrsa -out test-ca.key
